test/pass/basic_syntax/empty_vararg_only_vararg.lly
define example(args: integer...) {    }

example()
