test/fail/basic_syntax/return_without_value.lly
#[
SyntaxError: 'return' expression has no value.
    from return_without_value.lly:6
]#

define f {  } define g : integer { return f() }
